ajoute lien projet compilation

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ consisting of making an ai-like text generator in OCaml using Markov Chains.</p>
       <p class="project-text">End of semester project of the compilation course,
 consisting of building a mini-C compiler in groups of two.</p>
       <div class="interaction-div">
-        <!-- <p class="interaction-text"><a href="https://github.com/omelette-bio/projet-pf" target="_blank">[GitHub repo]</a></p> -->
+        <p class="interaction-text"><a href="https://github.com/omelette-bio/compilateur" target="_blank">[GitHub repo]</a></p> 
         <!-- <p class="interaction-text" onclick="goToProject5()">[Next]</p> -->
         <p class="interaction-text" onclick="backToMenu()">[Back]</p>
       </div>
